--- a/session2/Session2_Assignment_2.ipynb
+++ b/session2/Session2_Assignment_2.ipynb
@@ -30,11 +30,11 @@
       "metadata": {
         "id": "kGWv5hBhv2jf",
         "colab_type": "code",
+        "outputId": "3b1bd650-9006-424b-dfb1-4c8b605d939d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6e348205-e8bd-432e-ddbf-0410013de3c0"
+        }
       },
       "source": [
         "# https://keras.io/\n",
@@ -43,7 +43,7 @@
         "\n",
         "# install keras api"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,7 +81,11 @@
       "metadata": {
         "id": "8CdSu2lMwB9s",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "d1224b3a-d72f-4af9-b54c-e0585d2a0ee1"
       },
       "source": [
         "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
@@ -90,15 +94,24 @@
         "\n",
         "# mnist data is splitted in to x_train and y_train and then x_test and y_test"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "tLaDf0-rwCmj",
         "colab_type": "code",
-        "outputId": "a5a46313-a191-4b5b-cc88-97fd5ff0bb35",
+        "outputId": "7b950501-df67-4434-d3a6-d7bb326dd96c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 304
@@ -112,7 +125,7 @@
         "\n",
         "# print x_train shape "
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,13 +138,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f7e0709a390>"
+              "<matplotlib.image.AxesImage at 0x7fe6e25fe048>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -191,7 +204,7 @@
       "metadata": {
         "id": "JNKLOmhlwJQl",
         "colab_type": "code",
-        "outputId": "18992200-095a-4283-ea1d-8d2b2f544b84",
+        "outputId": "9dad71ae-a5e5-401f-d20c-27b060e069a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -202,7 +215,7 @@
         "\n",
         "y_train[:10]"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,7 +227,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -249,7 +262,7 @@
       "metadata": {
         "id": "upxc99AswMW0",
         "colab_type": "code",
-        "outputId": "18b04d81-6bb1-4d08-c2ca-fba20d67af15",
+        "outputId": "3ed3a878-4f3e-4ca4-9559-76dc537ce0d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 191
@@ -260,7 +273,7 @@
         "\n",
         "Y_train[:10]\n"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +294,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -290,7 +303,7 @@
       "metadata": {
         "id": "irTVUE47wNwr",
         "colab_type": "code",
-        "outputId": "cbc68760-1b1d-44c6-ebe7-8a1ef3b368b5",
+        "outputId": "1e5605a0-42c2-4055-f940-120168e62f6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 819
@@ -315,7 +328,7 @@
         "model.add(Convolution2D(512, 3, 3, activation='relu'))\n",
         "model.add(Convolution2D(1024, 3, 3, activation='relu'))\n",
         "model.add(Convolution2D(2048, 3, 3, activation='relu'))\n",
-        "model.add(Convolution2D(10, 3, 3))\n",
+        "model.add(Convolution2D(10, 3, 3, activation='relu'))\n",
         "\n",
         "model.add(Flatten())\n",
         "model.add(Activation('softmax'))\n",
@@ -339,14 +352,39 @@
         "\n",
         "# \n"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
-            "Colocations handled automatically by placer.\n",
+            "Colocations handled automatically by placer.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:10: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(32, (3, 3), activation=\"relu\", input_shape=(28, 28, 1...)`\n",
+            "  # Remove the CWD from sys.path while we load stuff.\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:11: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), activation=\"relu\")`\n",
+            "  # This is added back by InteractiveShellApp.init_path()\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:12: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(128, (3, 3), activation=\"relu\")`\n",
+            "  if sys.path[0] == '':\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:15: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(256, (3, 3), activation=\"relu\")`\n",
+            "  from ipykernel import kernelapp as app\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:16: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(512, (3, 3), activation=\"relu\")`\n",
+            "  app.launch_new_instance()\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:17: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(1024, (3, 3), activation=\"relu\")`\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:18: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(2048, (3, 3), activation=\"relu\")`\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:19: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(10, (3, 3), activation=\"relu\")`\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
@@ -378,25 +416,6 @@
             "_________________________________________________________________\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:10: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(32, (3, 3), activation=\"relu\", input_shape=(28, 28, 1...)`\n",
-            "  # Remove the CWD from sys.path while we load stuff.\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:11: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), activation=\"relu\")`\n",
-            "  # This is added back by InteractiveShellApp.init_path()\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:12: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(128, (3, 3), activation=\"relu\")`\n",
-            "  if sys.path[0] == '':\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:15: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(256, (3, 3), activation=\"relu\")`\n",
-            "  from ipykernel import kernelapp as app\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:16: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(512, (3, 3), activation=\"relu\")`\n",
-            "  app.launch_new_instance()\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:17: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(1024, (3, 3), activation=\"relu\")`\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:18: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(2048, (3, 3), activation=\"relu\")`\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:19: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(10, (3, 3))`\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
@@ -422,7 +441,7 @@
       "metadata": {
         "id": "5O248wVQyMft",
         "colab_type": "code",
-        "outputId": "f9e53bbd-c1bf-488e-e5e1-60059e710a94",
+        "outputId": "8d9bf454-f640-4404-ac0c-bdcdf3ebb7dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 489
@@ -433,7 +452,7 @@
         "\n",
         "model.fit(X_train, Y_train, batch_size=32, nb_epoch=10, verbose=1)"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,25 +475,25 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "60000/60000 [==============================] - 117s 2ms/step - loss: 0.1468 - acc: 0.9543\n",
+            "60000/60000 [==============================] - 117s 2ms/step - loss: 1.4691 - acc: 0.3870\n",
             "Epoch 2/10\n",
-            "60000/60000 [==============================] - 114s 2ms/step - loss: 0.0570 - acc: 0.9837\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 1.4213 - acc: 0.3949\n",
             "Epoch 3/10\n",
-            "60000/60000 [==============================] - 114s 2ms/step - loss: 0.0412 - acc: 0.9877\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 1.4099 - acc: 0.3963\n",
             "Epoch 4/10\n",
-            "60000/60000 [==============================] - 114s 2ms/step - loss: 0.0348 - acc: 0.9898\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 1.4054 - acc: 0.3970\n",
             "Epoch 5/10\n",
-            "60000/60000 [==============================] - 114s 2ms/step - loss: 0.0282 - acc: 0.9921\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 1.4045 - acc: 0.3969\n",
             "Epoch 6/10\n",
-            "60000/60000 [==============================] - 114s 2ms/step - loss: 0.0259 - acc: 0.9928\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 1.3704 - acc: 0.4110\n",
             "Epoch 7/10\n",
-            "60000/60000 [==============================] - 114s 2ms/step - loss: 0.0215 - acc: 0.9939\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 1.1712 - acc: 0.4982\n",
             "Epoch 8/10\n",
-            "60000/60000 [==============================] - 114s 2ms/step - loss: 0.0207 - acc: 0.9943\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 1.1661 - acc: 0.4995\n",
             "Epoch 9/10\n",
-            "60000/60000 [==============================] - 114s 2ms/step - loss: 0.0209 - acc: 0.9946\n",
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 1.1665 - acc: 0.4989\n",
             "Epoch 10/10\n",
-            "60000/60000 [==============================] - 114s 2ms/step - loss: 0.0205 - acc: 0.9940\n"
+            "60000/60000 [==============================] - 111s 2ms/step - loss: 1.1688 - acc: 0.4985\n"
           ],
           "name": "stdout"
         },
@@ -482,13 +501,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f7e0707cf60>"
+              "<keras.callbacks.History at 0x7fe6e25fe668>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
@@ -512,7 +531,7 @@
       "metadata": {
         "id": "CfJiXOKsyj4y",
         "colab_type": "code",
-        "outputId": "34bafd4c-7a68-4971-cc99-b8dedf850578",
+        "outputId": "c9d0dfcc-f5c2-4dd4-cef7-0a959fa54e63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -524,12 +543,12 @@
         "print(score)\n",
         "\n"
       ],
-      "execution_count": 15,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0.03566778288710689, 0.9915]\n"
+            "[1.1966427927017211, 0.4948]\n"
           ],
           "name": "stdout"
         }
@@ -555,7 +574,7 @@
       "metadata": {
         "id": "WWKKoOKwyppN",
         "colab_type": "code",
-        "outputId": "2ba8f229-d1e4-40e4-ac25-64c37603e799",
+        "outputId": "5a70d96f-a157-42d6-cc83-3e69c0dd64b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 347
@@ -567,34 +586,59 @@
         "print(y_pred[:9])\n",
         "print(y_test[:9])"
       ],
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[1.9158380e-28 7.9252498e-21 2.5667282e-20 3.1744144e-18 1.0533614e-23\n",
-            "  2.7005011e-25 1.8099254e-28 1.0000000e+00 5.6306660e-26 2.9927630e-19]\n",
-            " [9.5318393e-13 5.6752279e-15 1.0000000e+00 3.6034531e-19 1.1847324e-16\n",
-            "  6.0348587e-18 6.3508210e-13 2.6760706e-20 2.6820204e-11 2.1272260e-21]\n",
-            " [3.3429316e-15 1.0000000e+00 4.9892116e-13 3.4530691e-19 1.5005445e-12\n",
-            "  1.1318331e-11 1.7601797e-12 5.4005411e-14 6.3702201e-13 4.7038582e-20]\n",
-            " [1.0000000e+00 1.6186563e-18 1.3042156e-12 6.7601601e-12 3.3713250e-14\n",
-            "  3.5061399e-13 1.2560814e-11 1.0942704e-15 3.8962904e-12 2.4220770e-13]\n",
-            " [1.1627437e-17 3.4489328e-13 5.2141461e-14 2.3565869e-18 1.0000000e+00\n",
-            "  1.8351368e-18 6.9597500e-15 1.2693045e-13 2.0867464e-17 8.1567904e-14]\n",
-            " [5.7793151e-20 1.0000000e+00 1.0780453e-15 3.3358684e-26 2.7754594e-16\n",
-            "  1.5325846e-16 2.0376296e-17 3.1303793e-17 2.7265144e-17 3.5771582e-26]\n",
-            " [1.7959858e-19 3.7991159e-11 2.1021446e-15 5.8386251e-16 1.0000000e+00\n",
-            "  5.0369330e-17 1.5001688e-13 1.3691336e-08 1.5584040e-12 7.6732641e-16]\n",
-            " [7.6018455e-11 1.4884712e-14 2.0696691e-11 3.3960310e-10 1.2913764e-06\n",
-            "  1.4411751e-07 1.3603408e-12 6.6073103e-10 3.3037719e-07 9.9999821e-01]\n",
-            " [4.3642837e-12 6.6760354e-15 7.1006640e-16 2.1837698e-11 1.9361793e-14\n",
-            "  9.9917161e-01 8.2846393e-04 3.5475925e-14 6.0138272e-10 4.4183107e-10]]\n",
+            "[[1.6782832e-07 1.6782832e-07 1.6782832e-07 1.6782832e-07 1.6782832e-07\n",
+            "  1.6782832e-07 1.6782832e-07 9.9999845e-01 1.6782832e-07 1.6782832e-07]\n",
+            " [4.2042316e-09 4.2042316e-09 1.0000000e+00 4.2042316e-09 4.2042316e-09\n",
+            "  4.2042316e-09 4.2042316e-09 4.2042316e-09 4.2042316e-09 4.2042316e-09]\n",
+            " [1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01\n",
+            "  1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01]\n",
+            " [9.9194860e-01 4.6288379e-04 4.6288379e-04 7.8620866e-04 4.6288379e-04\n",
+            "  4.6288379e-04 4.0251017e-03 4.6288379e-04 4.6288379e-04 4.6288379e-04]\n",
+            " [1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01\n",
+            "  1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01]\n",
+            " [1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01\n",
+            "  1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01]\n",
+            " [1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01\n",
+            "  1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01]\n",
+            " [1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01\n",
+            "  1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01]\n",
+            " [1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01\n",
+            "  1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01 1.0000000e-01]]\n",
             "[7 2 1 0 4 1 4 9 5]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qIzmCst4m75b",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "'''\n",
+        "\n",
+        " - reducing from 2048 to 10 layers is a mistake its like pouring a tank full of water into small pipe \n",
+        " \n",
+        " - 25M parameters with increasing method of architecture is too huge for predicting a 28x28x1 image which makes \n",
+        " the neurons to flow in a sparse manner . \n",
+        " \n",
+        "Usually at the last layer where output is expected to be num_outputs we would not use activations like relu ,sigmoid etc which would nullify\n",
+        "the neurons(negative values) .In the final layer we need more number of neurons for predicting the output activation so by default if we \n",
+        "didnt give any activation function it would give linear activations .\n",
+        " \n",
+        " \n",
+        "''' "
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
